--- a/index.html
+++ b/index.html
@@ -1678,9 +1678,9 @@
             <div class="tier-price">&lt; 500<span> scr</span></div>
           </div>
           <ul class="tier-features">
-            <li>2.00% instant withdraw rate</li>
-            <li>Free standard withdraws (1-3 biz days)</li>
-            <li>Basic app theme</li>
+            <li>2.50% instant withdraw rate</li>
+            <li>-</li>
+            <li>-</li>
           </ul>
           <div class="tier-dots">
             <span class="tier-dot" style="background:#1abc9c;"></span>
@@ -1697,9 +1697,9 @@
             <div class="tier-price">500+<span> scr</span></div>
           </div>
           <ul class="tier-features">
-            <li>1.75% instant withdraw rate</li>
-            <li>Up to 1% cash back</li>
-            <li>Golden app theme</li>
+            <li>In app statistics</li>
+            <li>Unlock themes</li>
+            <li>-</li>
           </ul>
           <div class="tier-dots">
             <span class="tier-dot" style="background:#c9a227;"></span>
@@ -1720,9 +1720,9 @@
             <div class="tier-price">1,000+<span> scr</span></div>
           </div>
           <ul class="tier-features">
-            <li>1.50% instant withdraw rate</li>
-            <li>Up to 1.3% cash back</li>
-            <li>Midnight app theme</li>
+            <li>1.25% instant withdraw rate</li>
+            <li>Up to 1.75% savings</li>
+            <li>Midnight theme & Black badge</li>
           </ul>
           <div class="tier-dots">
             <span class="tier-dot" style="background:#07111e;"></span>
