your message here

--- a/index.html
+++ b/index.html
@@ -44,6 +44,12 @@
       font-weight: 900;
       font-style: normal;
     }
+    @font-face {
+      font-family: 'GilroyMedium';
+      src: url('Gilroy-Medium.ttf') format('truetype');
+      font-weight: 500;
+      font-style: normal;
+    }
     *, *::before, *::after { box-sizing: border-box; margin: 0; padding: 0; }
 
     :root {
@@ -694,7 +700,7 @@
       margin-bottom: 16px;
     }
     .tier-features li {
-      font-family: 'GilroyRegular', sans-serif;
+      font-family: 'GilroyMedium', sans-serif;
       font-size: 0.82rem;
       padding: 5px 0;
       border-bottom: 1px solid rgba(0,0,0,0.07);
