your message here

--- a/index.html
+++ b/index.html
@@ -1098,9 +1098,9 @@
       background: #f2f0ef;
       border-radius: 14px;
       padding: 10px 16px;
-      transition: background 0.2s ease, transform 0.2s ease, background-color 0.5s ease;
+      transition: none;
     }
-    .lb-row:hover { background: var(--teal-light); transform: translateX(4px); }
+    .lb-row:hover { background: #f2f0ef; }
     .lb-rnum {
       font-family: 'GilroyLight', sans-serif;
       font-size: 0.82rem;
