your message here

--- a/index.html
+++ b/index.html
@@ -1707,7 +1707,7 @@
     <div class="mint-blend mint-blend-default"></div>
     <div class="tiers-tagline" data-reveal="left" data-delay="0">
       <div class="tiers-tagline-title">Earned<br>Not Paid</div>
-      <p>Divvum's tier system rewards users for their payment and social activity on in the app.
+      <p>Divvum's tier system rewards users for their payment and social activity in the app.
 
     </div>
     <div class="tiers-inner">
@@ -1719,7 +1719,7 @@
             <div class="tier-price">&lt; 250<span> scr</span></div>
           </div>
           <ul class="tier-features">
-            <li>2.00% instant withdraw rate</li>
+            <li>2.00% Instant Withdrawal Rate</li>
           </ul>
           <div class="tier-dots">
             <span class="tier-dot" style="background:#1abc9c;"></span>
@@ -1775,8 +1775,8 @@
             <div class="tier-price">1,000+<span> scr</span></div>
           </div>
           <ul class="tier-features">
-            <li>1.35%-1.70% Instant Withdraw Rate</li>
-            <li>Up to 1.65% savings</li>
+            <li>1.35%-1.70% Instant Withdrawal Rate</li>
+            <li>Point Boosts</li>
             <li>Divvum Black Badge</li>
           </ul>
           <div class="tier-dots">
