your message here

--- a/index.html
+++ b/index.html
@@ -6,46 +6,46 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
   <title>Divvum — Split Smarter</title>
   <link rel="icon" type="image/avif" href="il_1080xN.1090093355_g454.avif" />
-  <link href="https://fonts.googleapis.com/css2?family=Syne:wght@700;800&display=swap" rel="stylesheet"/>
+  <link href="https://fonts.googleapis.com/css2?family=DM+Sans:ital,opsz,wght@0,9..40,300;0,9..40,400;0,9..40,500;0,9..40,600;0,9..40,700&display=swap" rel="stylesheet"/>
   <style>
     @font-face {
-      font-family: 'Gilroy';
+      font-family: 'DM Sans';
       src: url('Gilroy-Medium.ttf') format('truetype');
       font-weight: 500;
       font-style: normal;
     }
     @font-face {
-      font-family: 'GilroyLight';
+      font-family: 'DM Sans';
       src: url('Gilroy-Light.ttf') format('truetype');
       font-weight: 300;
       font-style: normal;
     }
     @font-face {
-      font-family: 'GilroyRegular';
+      font-family: 'DM Sans';
       src: url('Gilroy-Regular.ttf') format('truetype');
       font-weight: 400;
       font-style: normal;
     }
     @font-face {
-      font-family: 'GilroySemiBold';
+      font-family: 'DM Sans';
       src: url('Gilroy-SemiBold.ttf') format('truetype');
       font-weight: 600;
       font-style: normal;
     }
     @font-face {
-      font-family: 'GilroyBold';
+      font-family: 'DM Sans';
       src: url('Gilroy-Bold.ttf') format('truetype');
       font-weight: 700;
       font-style: normal;
     }
     @font-face {
-      font-family: 'GilroyBlack';
+      font-family: 'DM Sans';
       src: url('Gilroy-Black.ttf') format('truetype');
       font-weight: 900;
       font-style: normal;
     }
     @font-face {
-      font-family: 'GilroyMedium';
+      font-family: 'DM Sans';
       src: url('Gilroy-Medium.ttf') format('truetype');
       font-weight: 500;
       font-style: normal;
@@ -65,7 +65,7 @@
 
 
     body {
-      font-family: 'Gilroy', sans-serif;
+      font-family: 'DM Sans', sans-serif;
       background: var(--bg-primary);
       color: var(--text-primary);
       min-height: 100vh;
@@ -121,7 +121,7 @@
       z-index: 2;
     }
     .tiers-tagline-title {
-      font-family: 'Syne', sans-serif;
+      font-family: 'DM Sans', sans-serif;
       font-size: 1.65rem;
       font-weight: 800;
       letter-spacing: 0.08em;
@@ -132,7 +132,7 @@
       transition: color 0.5s ease;
     }
     .tiers-tagline p {
-      font-family: 'Gilroy', sans-serif;
+      font-family: 'DM Sans', sans-serif;
       font-size: clamp(1.15rem, 1.7vw, 1.4rem);
       font-weight: 300;
       line-height: 1.7;
@@ -211,7 +211,7 @@
     }
 
     .logo {
-      font-family: 'Syne', sans-serif;
+      font-family: 'DM Sans', sans-serif;
       font-size: 1.4rem;
       font-weight: 800;
       letter-spacing: 0.08em;
@@ -268,7 +268,7 @@
 
 
     h1 {
-      font-family: 'Syne', sans-serif;
+      font-family: 'DM Sans', sans-serif;
       font-size: clamp(2.6rem, 6vw, 4.2rem);
       font-weight: 800;
       letter-spacing: 0.08em;
@@ -372,7 +372,7 @@
       z-index: 1;
     }
     .w-status-time {
-      font-family: 'GilroyLight', sans-serif;
+      font-family: 'DM Sans', sans-serif;
       font-size: 0.6rem;
       font-weight: 700;
       color: var(--navy);
@@ -402,7 +402,7 @@
       height: 36px;
     }
     .welcome-hero h1 {
-      font-family: 'GilroyLight', sans-serif;
+      font-family: 'DM Sans', sans-serif;
       font-size: 1.6rem;
       font-weight: 800;
       letter-spacing: 0.14em;
@@ -423,7 +423,7 @@
       flex-direction: column;
     }
     .welcome-tagline {
-      font-family: 'GilroyLight', sans-serif;
+      font-family: 'DM Sans', sans-serif;
       font-size: 0.85rem;
       font-weight: 800;
       color: var(--navy);
@@ -432,7 +432,7 @@
       margin-bottom: 5px;
     }
     .welcome-sub {
-      font-family: 'Gilroy', sans-serif;
+      font-family: 'DM Sans', sans-serif;
       font-size: 0.58rem;
       color: var(--gray);
       line-height: 1.55;
@@ -447,7 +447,7 @@
       border: none;
       border-radius: 12px;
       padding: 10px 0;
-      font-family: 'Gilroy', sans-serif;
+      font-family: 'DM Sans', sans-serif;
       font-size: 0.6rem;
       font-weight: 600;
       cursor: pointer;
@@ -464,7 +464,7 @@
       margin: 0 0 8px;
     }
     .w-divider-line { flex: 1; height: 1px; background: rgba(0,0,0,0.08); }
-    .w-divider-text { font-size: 0.52rem; color: var(--gray); font-family: 'Gilroy', sans-serif; }
+    .w-divider-text { font-size: 0.52rem; color: var(--gray); font-family: 'DM Sans', sans-serif; }
     .w-terms {
       margin-top: auto;
       font-size: 0.47rem;
@@ -474,7 +474,7 @@
     }
     .w-terms a { color: var(--teal-dark); text-decoration: none; }
 
-    .s-greeting { font-family: 'GilroyLight', sans-serif; font-weight: 800; font-size: 0.9rem; color: var(--navy); }
+    .s-greeting { font-family: 'DM Sans', sans-serif; font-weight: 800; font-size: 0.9rem; color: var(--navy); }
     .s-brand { font-size: 0.6rem; letter-spacing: 0.18em; font-weight: 700; color: var(--teal); margin-bottom: 14px; }
 
     .s-card {
@@ -486,7 +486,7 @@
     }
     .s-card-top { display: flex; justify-content: space-between; align-items: center; margin-bottom: 12px; }
     .s-balance-label { font-size: 0.55rem; color: var(--gray); text-transform: uppercase; letter-spacing: 0.1em; }
-    .s-balance { font-family: 'GilroyLight', sans-serif; font-size: 1.5rem; font-weight: 800; color: var(--teal); }
+    .s-balance { font-family: 'DM Sans', sans-serif; font-size: 1.5rem; font-weight: 800; color: var(--teal); }
 
     .s-ring {
       width: 48px; height: 48px;
@@ -494,7 +494,7 @@
       border: 3.5px solid var(--teal);
       display: flex; flex-direction: column;
       align-items: center; justify-content: center;
-      font-family: 'GilroyLight', sans-serif;
+      font-family: 'DM Sans', sans-serif;
       font-size: 0.62rem; font-weight: 700;
       color: var(--teal); line-height: 1.1;
     }
@@ -509,22 +509,22 @@
       overflow: hidden;
     }
     .s-stat { background: #f0faf7; padding: 7px 4px; text-align: center; }
-    .s-stat-n { font-family: 'GilroyLight', sans-serif; font-size: 0.9rem; font-weight: 700; color: var(--navy); }
+    .s-stat-n { font-family: 'DM Sans', sans-serif; font-size: 0.9rem; font-weight: 700; color: var(--navy); }
     .s-stat-l { font-size: 0.52rem; color: var(--gray); }
 
     .s-btns { display: flex; gap: 6px; margin-bottom: 12px; }
     .s-btn-main {
       flex: 1; background: var(--teal); color: white;
       border: none; border-radius: 100px; padding: 9px 0;
-      font-size: 0.65rem; font-weight: 600; font-family: 'Gilroy', sans-serif;
+      font-size: 0.65rem; font-weight: 600; font-family: 'DM Sans', sans-serif;
     }
     .s-btn-sec {
       background: #f2f0ef; border: 1.5px solid rgba(26,188,156,0.35);
       border-radius: 100px; padding: 9px 11px;
-      font-size: 0.65rem; font-weight: 500; font-family: 'Gilroy', sans-serif; color: var(--navy);
+      font-size: 0.65rem; font-weight: 500; font-family: 'DM Sans', sans-serif; color: var(--navy);
     }
 
-    .s-section-title { font-family: 'GilroyLight', sans-serif; font-size: 0.7rem; font-weight: 700; margin-bottom: 7px; }
+    .s-section-title { font-family: 'DM Sans', sans-serif; font-size: 0.7rem; font-weight: 700; margin-bottom: 7px; }
 
     .s-activity-item {
       display: flex; align-items: center; gap: 8px;
@@ -536,7 +536,7 @@
       width: 26px; height: 26px; border-radius: 50%;
       background: var(--teal); color: white;
       display: flex; align-items: center; justify-content: center;
-      font-family: 'GilroyLight', sans-serif; font-size: 0.62rem; font-weight: 300; flex-shrink: 0;
+      font-family: 'DM Sans', sans-serif; font-size: 0.62rem; font-weight: 300; flex-shrink: 0;
     }
     .s-item-name { font-size: 0.64rem; font-weight: 600; }
     .s-item-sub { font-size: 0.54rem; color: var(--gray); }
@@ -557,7 +557,7 @@
     .bubble-right { right: -94px; top:0 80px; animation: float 4s ease-in-out -2.5s infinite; }
     .b-label { font-size: 0.6rem; color: #ffffff; margin-bottom: 1px; }
 
-    .b-val { font-family: 'GilroyLight', sans-serif; font-size: 0.95rem; font-weight: 700; color: var(--teal); }
+    .b-val { font-family: 'DM Sans', sans-serif; font-size: 0.95rem; font-weight: 700; color: var(--teal); }
 
     /* DOWNLOAD BUTTONS */
     .download-group { display: flex; gap: 14px; flex-wrap: wrap; justify-content: center; position: relative; }
@@ -631,7 +631,7 @@
       transition: color 0.5s ease;
     }
     .tiers-heading {
-      font-family: 'Syne', sans-serif;
+      font-family: 'DM Sans', sans-serif;
       font-size: clamp(2rem, 4vw, 3rem);
       font-weight: 800;
       letter-spacing: 0.08em;
@@ -678,14 +678,14 @@
       margin-bottom: 14px;
     }
     .tier-badge {
-      font-family: 'Syne', sans-serif;
+      font-family: 'DM Sans', sans-serif;
       font-size: 1.1rem;
       font-weight: 800;
       letter-spacing: 0.08em;
       margin-bottom: 4px;
     }
     .tier-price {
-      font-family: 'Syne', sans-serif;
+      font-family: 'DM Sans', sans-serif;
       font-size: 1.8rem;
       font-weight: 800;
     }
@@ -700,7 +700,7 @@
       margin-bottom: 16px;
     }
     .tier-features li {
-      font-family: 'GilroyMedium', sans-serif;
+      font-family: 'DM Sans', sans-serif;
       font-size: 0.82rem;
       padding: 5px 0;
       border-bottom: 1px solid rgba(0,0,0,0.07);
@@ -727,7 +727,7 @@
       border: none;
       border-radius: 100px;
       padding: 10px 24px;
-      font-family: 'Gilroy', sans-serif;
+      font-family: 'DM Sans', sans-serif;
       font-size: 0.82rem;
       font-weight: 600;
       cursor: pointer;
@@ -838,7 +838,7 @@
       color: rgba(23,165,137,0.7);
       text-align: center;
       margin-top: 18px;
-      font-family: 'Gilroy', sans-serif;
+      font-family: 'DM Sans', sans-serif;
       text-transform: uppercase;
       position: relative;
       z-index: 1;
@@ -849,7 +849,7 @@
       color: rgba(201,162,39,0.8);
       text-align: center;
       margin-top: 18px;
-      font-family: 'Gilroy', sans-serif;
+      font-family: 'DM Sans', sans-serif;
       text-transform: uppercase;
       position: relative;
       z-index: 1;
@@ -913,7 +913,7 @@
       color: rgba(255,255,255,0.55);
       text-align: center;
       margin-top: 18px;
-      font-family: 'Gilroy', sans-serif;
+      font-family: 'DM Sans', sans-serif;
       text-transform: uppercase;
       position: relative;
       z-index: 1;
@@ -981,7 +981,7 @@
       z-index: 2;
     }
     .lb-heading {
-      font-family: 'Syne', sans-serif;
+      font-family: 'DM Sans', sans-serif;
       font-size: 1.65rem;
       font-weight: 800;
       letter-spacing: 0.08em;
@@ -992,7 +992,7 @@
       transition: color 0.5s ease;
     }
     .lb-sub {
-      font-family: 'Gilroy', sans-serif;
+      font-family: 'DM Sans', sans-serif;
       font-size: clamp(1.15rem, 1.7vw, 1.4rem);
       font-weight: 300;
       color: var(--navy);
@@ -1002,7 +1002,7 @@
       transition: color 0.5s ease;
     }
     .lb-blurb {
-      font-family: 'Gilroy', sans-serif;
+      font-family: 'DM Sans', sans-serif;
       font-size: clamp(1.15rem, 1.7vw, 1.4rem);
       font-weight: 300;
       color: var(--navy);
@@ -1058,7 +1058,7 @@
     .lb-pod-3 .lb-pod-avatar { border-color: #b97333; background: #fdf0e3; color: #92581a; }
     .lb-pod-rank { display: none; }
     .lb-pod-name {
-      font-family: 'GilroyBlack', sans-serif;
+      font-family: 'DM Sans', sans-serif;
       font-size: 0.78rem;
       font-weight: 600;
       color: var(--navy);
@@ -1066,7 +1066,7 @@
       transition: color 0.5s ease;
     }
     .lb-pod-score {
-      font-family: 'GilroyBold', sans-serif;
+      font-family: 'DM Sans', sans-serif;
       font-size: 0.8rem;
       font-weight: 700;
       color: var(--teal-dark);
@@ -1084,7 +1084,7 @@
       display: flex;
       align-items: center;
       justify-content: center;
-      font-family: 'GilroyBlack', sans-serif;
+      font-family: 'DM Sans', sans-serif;
       font-size: 2.2rem;
       color: rgba(255,255,255,0.55);
       letter-spacing: -0.02em;
@@ -1137,7 +1137,7 @@
     }
     .lb-row:hover { background: #f2f0ef; }
     .lb-rnum {
-      font-family: 'GilroyLight', sans-serif;
+      font-family: 'DM Sans', sans-serif;
       font-size: 0.82rem;
       font-weight: 800;
       color: var(--gray);
@@ -1166,7 +1166,7 @@
     .lb-ravatar svg { width: 52%; height: 52%; }
     .lb-ravatar img { width: 100%; height: 100%; object-fit: cover; display: block; }
     .lb-rname {
-      font-family: 'GilroyBold', sans-serif;
+      font-family: 'DM Sans', sans-serif;
       font-size: 0.85rem;
       font-weight: 600;
       color: var(--navy);
@@ -1188,7 +1188,7 @@
       transition: background 0.5s ease;
     }
     .lb-rscore {
-      font-family: 'GilroyLight', sans-serif;
+      font-family: 'DM Sans', sans-serif;
       font-size: 0.82rem;
       font-weight: 700;
       color: var(--teal-dark);
@@ -1267,14 +1267,14 @@
     }
     .exp-info { flex: 1; }
     .exp-name {
-      font-family: 'GilroyLight', sans-serif;
+      font-family: 'DM Sans', sans-serif;
       font-weight: 700;
       font-size: 0.9rem;
       color: var(--navy);
     }
     .exp-meta { font-size: 0.72rem; color: var(--gray); margin-top: 2px; }
     .exp-amount {
-      font-family: 'GilroyLight', sans-serif;
+      font-family: 'DM Sans', sans-serif;
       font-size: 1.4rem;
       font-weight: 800;
       color: var(--navy);
@@ -1325,7 +1325,7 @@
       border-radius: 50%;
       background: var(--teal);
       color: white;
-      font-family: 'GilroyLight', sans-serif;
+      font-family: 'DM Sans', sans-serif;
       font-size: 0.6rem;
       font-weight: 700;
       display: flex;
@@ -1338,7 +1338,7 @@
     .exp-person.pending .exp-avatar { background: #e5e5e5; color: var(--gray); }
     .exp-person-name { font-size: 0.76rem; font-weight: 600; color: var(--navy); }
     .exp-person-amt {
-      font-family: 'GilroyLight', sans-serif;
+      font-family: 'DM Sans', sans-serif;
       font-size: 1.05rem;
       font-weight: 800;
       color: var(--navy);
@@ -1371,7 +1371,7 @@
     }
     .exp-progress-label { font-size: 0.72rem; color: var(--gray); }
     .exp-progress-vals {
-      font-family: 'GilroyLight', sans-serif;
+      font-family: 'DM Sans', sans-serif;
       font-size: 0.72rem;
       font-weight: 700;
       color: var(--teal-dark);
@@ -1694,7 +1694,7 @@
 
     <!-- Text -->
     <div class="about-text tiers-tagline" data-reveal="left" data-delay="80">
-      <div class="tiers-tagline-title">How It<br>Works</div>
+      <div class="tiers-tagline-title">How It Works</div>
       <p>Paid for dinner? Covered the tab? Won a bet? </p>
       <p>Divvum will split the expense how you like.</p>
       
@@ -1706,7 +1706,7 @@
   <section class="mint-section">
     <div class="mint-blend mint-blend-default"></div>
     <div class="tiers-tagline" data-reveal="left" data-delay="0">
-      <div class="tiers-tagline-title">Earned<br>Not Paid</div>
+      <div class="tiers-tagline-title">Earned Not Paid</div>
       <p>Divvum's tier system rewards users for their payment and social activity in the app.
 
     </div>
@@ -1888,7 +1888,7 @@
 
     </div>
     <div class="lb-tagline" data-reveal="right" data-delay="0">
-      <h2 class="lb-heading">Leader<br>board</h2>
+      <h2 class="lb-heading">Leaderboard</h2>
       <p class="lb-sub">See how your reliabilty stacks up against friends.</p>
     </div>
     <div class="lb-blend lb-blend-default"></div>
